core/include/zlink.h

typedef unsigned __int64 uint64_t;
typedef __int32 int32_t;
typedef unsigned __int32 uint32_t;
typedef unsigned __int16 uint16_t;
typedef unsigned __int8 uint8_t;
/******************************************************************************/
/*  0MQ message definition.                                                   */
/******************************************************************************/
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    uint8_t data[255];
} zlink_routing_id_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
typedef void (*zlink_reply_handler_fn) (
  zlink_request_result_t result_,
  zlink_msg_t *parts_,
  size_t part_count_,
  void *userdata_);
typedef void (*zlink_spot_handler_fn) (
  const zlink_routing_id_t *source_rid_,
  const zlink_routing_id_t *spot_rid_,
  uint64_t request_seq_,
  zlink_msg_t *parts_,
  size_t part_count_,
  void *userdata_);
typedef void (*zlink_spot_dispatch_event_handler_fn) (
  void *spot_,
  zlink_spot_dispatch_event_t event_,
  void *userdata_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_request_spot (
  void *spot_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_send_spot (
  void *spot_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_send_router (
  void *spot_,
  const zlink_routing_id_t *peer_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_request_router (
  void *spot_,
  const zlink_routing_id_t *peer_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_reply_spot (
  void *spot_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  uint64_t request_seq_,
  zlink_msg_t *parts_,
  size_t part_count_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_reply_router (
  void *spot_,
  const zlink_routing_id_t *peer_rid_,
  uint64_t request_seq_,
  zlink_msg_t *parts_,
  size_t part_count_);
ZLINK_EXPORT zlink_handler_result_t zlink_spot_handler (
  void *spot_, zlink_spot_handler_fn handler_, void *userdata_);
ZLINK_EXPORT zlink_handler_result_t zlink_spot_dispatch_event_handler (
  void *spot_,
  zlink_spot_dispatch_event_handler_fn handler_,
  void *userdata_);
ZLINK_EXPORT zlink_recv_result_t zlink_spot_recv (void *spot_,
                                  const zlink_routing_id_t **source_rid_out_,
                                  const zlink_routing_id_t **spot_rid_out_,
                                  uint64_t *request_seq_out_,
                                  zlink_msg_t **parts_out_,
                                  size_t *part_count_out_,
                                  zlink_recv_flags_t flags_);
/******************************************************************************/
/*  SPOT PUB/SUB API                                                          */
/******************************************************************************/

/* SPOT -------------------------------------------------------------------- */

/**
 * @brief Create a unified SPOT facade over an existing SPOT node.
 *
 * The returned handle borrows `node`, lazily creates side sockets as needed,
 * and must be released with `zlink_spot_destroy()`. Destroying the facade does
 * not destroy the underlying node.
 */
ZLINK_EXPORT void *zlink_spot_new (void *node);
/** @brief Destroy a unified SPOT handle. */
ZLINK_EXPORT zlink_close_result_t zlink_spot_destroy (void **spot_p);
/* SPOT Node --------------------------------------------------------------- */

/**
 * @brief Create a SPOT node runtime for topology, discovery, and lifecycle.
 *
 * SPOT node handles own the internal pub/sub runtime that backs
 * `zlink_spot_new(node)` but do not expose the generic data-plane facade
 * directly.
 */
ZLINK_EXPORT void *zlink_spot_node_new (void *ctx);
/**
 * @brief Destroy a SPOT node and release all resources.
 *
 * Attached spot nodes are normally shut down by `zlink_discovery_destroy()`.
 */
ZLINK_EXPORT zlink_close_result_t zlink_spot_node_destroy (void **node_p);
/** @brief Bind the SPOT node to an endpoint.
 *
 * Supports port 0 for ephemeral port allocation (e.g. "tcp://127.0.0.1:0").
 * After a successful bind, use zlink_spot_node_status_snapshot() to retrieve
 * the resolved endpoint (local_endpoint field) with the actual assigned port.
 */
ZLINK_EXPORT zlink_bind_result_t zlink_spot_node_bind (void *node, const char *endpoint);
/**
 * @brief Connect to a peer SPOT node endpoint (mesh topology).
 *
 * Returns EFSM if discovery is already attached.
 */
ZLINK_EXPORT zlink_connect_result_t zlink_spot_node_connect_peer (void *node,
                                               const char *peer_endpoint);
/**
 * @brief Disconnect from a peer SPOT node endpoint.
 *
 * Returns EFSM if discovery is already attached.
 */
ZLINK_EXPORT zlink_connect_result_t zlink_spot_node_disconnect_peer (
  void *node, const char *peer_endpoint);
/**
 * @brief Attach a Discovery instance for discovery-owned peer connection.
 *
 * After attach, the node takes its service identity from the discovery and
 * discovery destroy owns participant shutdown.
 */
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_attach_discovery (void *node,
                                                   void *discovery);
typedef struct zlink_spot_node_status_t
{
    char service_name[256];
    char local_endpoint[256];
    zlink_routing_id_t node_routing_id;
    zlink_spot_node_state_t state;
    uint32_t configured_peer_count;
    uint32_t active_peer_count;
    uint32_t connected_peer_count;
    uint32_t subject_count;
    uint32_t ready_subject_count;
    int32_t last_error;
    uint64_t last_changed_ms;
} zlink_spot_node_status_t;
typedef struct zlink_spot_node_peer_entry_t
{
    char service_name[256];
    char local_endpoint[256];
    char peer_endpoint[256];
    zlink_spot_peer_source_t source;
    zlink_spot_peer_state_t state;
    uint64_t connected_since_ms;
    uint64_t last_changed_ms;
} zlink_spot_node_peer_entry_t;
typedef struct zlink_spot_node_peer_filter_t
{
    char peer_endpoint[256];
    zlink_spot_peer_source_t source;
    zlink_spot_peer_state_t state;
} zlink_spot_node_peer_filter_t;
typedef struct zlink_spot_node_subject_entry_t
{
    zlink_spot_role_t role;
    char subject[256];
    uint32_t subject_kind;
    uint32_t ready_peer_count;
    uint32_t active_peer_count;
    uint64_t last_changed_ms;
} zlink_spot_node_subject_entry_t;
typedef struct zlink_spot_node_subject_filter_t
{
    zlink_spot_role_t role;
    char subject[256];
    uint32_t subject_kind;
} zlink_spot_node_subject_filter_t;
typedef struct zlink_registry_status_t
{
    uint32_t registry_id;
    char bind_endpoint[256];
    zlink_registry_state_t state;
    uint32_t topology_entry_count;
    uint32_t peer_registry_count;
    uint32_t connected_peer_registry_count;
    uint64_t list_seq;
    int32_t last_error;
    uint64_t last_changed_ms;
} zlink_registry_status_t;
typedef struct zlink_registry_service_summary_entry_t
{
    zlink_service_kind_t service_kind;
    zlink_service_role_t service_role;
    char service_name[256];
    uint32_t total_count;
    uint32_t connecting_count;
    uint32_t ready_count;
    uint32_t error_count;
    uint32_t stopped_count;
    uint64_t last_reported_ms;
} zlink_registry_service_summary_entry_t;
typedef struct zlink_registry_service_summary_filter_t
{
    zlink_service_kind_t service_kind;
    zlink_service_role_t service_role;
    char service_name[256];
} zlink_registry_service_summary_filter_t;
typedef struct zlink_member_peer_entry_t
{
    zlink_service_type_t service_type;
    uint16_t service_role;
    char service_name[256];
    char endpoint[256];
    zlink_routing_id_t routing_id;
    int64_t value;
} zlink_member_peer_entry_t;
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_status_snapshot (
  void *node_,
  zlink_spot_node_status_t *out_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_peers_snapshot (
  void *node_,
  zlink_spot_node_peer_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_peers_query (
  void *node_,
  const zlink_spot_node_peer_filter_t *filter_,
  zlink_spot_node_peer_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_subjects_snapshot (
  void *node_,
  const zlink_spot_node_subject_filter_t *filter_,
  zlink_spot_node_subject_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_status_snapshot (
  void *registry_,
  zlink_registry_status_t *out_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_service_summary_snapshot (
  void *registry_,
  const zlink_registry_service_summary_filter_t *filter_,
  zlink_registry_service_summary_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_member_peers (
  void *registry_,
  zlink_service_type_t service_type_,
  const char *service_name_,
  zlink_member_peer_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_registry_member_peer_metadata (
  void *registry_,
  zlink_service_type_t service_type_,
  const char *service_name_,
  uint16_t service_role_,
  const char *endpoint_,
  zlink_msg_t *metadata_out_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_member_peers (void *discovery_,
                                               zlink_member_peer_entry_t *entries_,
                                               size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_member_peer_metadata (
  void *discovery_,
  uint16_t service_role_,
  const char *endpoint_,
  zlink_msg_t *metadata_out_);
typedef struct zlink_registry_topology_entry_t
{
    zlink_routing_id_t routing_id;
    zlink_service_kind_t service_kind;
    zlink_service_role_t service_role;
    char service_name[256];
    char endpoint[256];
    zlink_topology_source_t source;
    zlink_topology_state_t state;
    uint32_t desired_count;
    uint32_t ready_count;
    uint32_t error_code;
    uint64_t last_reported_ms;
} zlink_registry_topology_entry_t;
typedef struct zlink_registry_topology_filter_t
{
    zlink_service_kind_t service_kind;
    zlink_service_role_t service_role;
    char service_name[256];
    zlink_routing_id_t routing_id;
    zlink_topology_state_t state;
    zlink_topology_source_t source;
} zlink_registry_topology_filter_t;
ZLINK_EXPORT zlink_config_result_t zlink_registry_topology_snapshot (
  void *registry,
  zlink_registry_topology_entry_t *entries,
  size_t *count);
ZLINK_EXPORT zlink_config_result_t zlink_registry_topology_query (
  void *registry,
  const zlink_registry_topology_filter_t *filter,
  zlink_registry_topology_entry_t *entries,
  size_t *count);
ZLINK_EXPORT void *zlink_registry_query_client_new (void *ctx);
ZLINK_EXPORT zlink_connect_result_t zlink_registry_query_client_connect (void *client,
                                                      const char *endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_registry_query_snapshot (
  void *client,
  const zlink_registry_topology_filter_t *filter,
  zlink_registry_topology_entry_t *entries,
  size_t *count);
ZLINK_EXPORT zlink_close_result_t zlink_registry_query_destroy (void **client_p);
typedef unsigned __int64 zlink_fd_t;
typedef unsigned int zlink_fd_t;
typedef int zlink_fd_t;
typedef struct zlink_pollitem_t
{
    void *socket;
    zlink_fd_t fd;
    short events;
    short revents;
} zlink_pollitem_t;
typedef struct zlink_poller_event_t
{
    zlink_poller_source_kind_t source_kind;
    void *socket;
    zlink_fd_t fd;
    void *timer;
    void *user_data;
    short events;
} zlink_poller_event_t;
ZLINK_EXPORT int zlink_poll (zlink_pollitem_t *items_,
                             int nitems_,
                             long timeout_,
                             zlink_config_result_t *error_out_);
ZLINK_EXPORT void *zlink_poller_new (void);
ZLINK_EXPORT zlink_close_result_t zlink_poller_destroy (void **poller_p_);
ZLINK_EXPORT int zlink_poller_size (void *poller_,
                                    zlink_config_result_t *error_out_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_add (void *poller_,
                                   void *socket_,
                                   void *user_data_,
                                   short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_modify (void *poller_,
                                      void *socket_,
                                      short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_remove (void *poller_, void *socket_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_add_fd (void *poller_,
                                      zlink_fd_t fd_,
                                      void *user_data_,
                                      short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_modify_fd (void *poller_,
                                         zlink_fd_t fd_,
                                         short events_);
ZLINK_EXPORT zlink_config_result_t zlink_poller_remove_fd (void *poller_, zlink_fd_t fd_);
ZLINK_EXPORT int zlink_poller_wait (void *poller_,
                                    zlink_poller_event_t *event_,
                                    long timeout_,
                                    zlink_config_result_t *error_out_);
ZLINK_EXPORT int zlink_poller_wait_all (void *poller_,
                                        zlink_poller_event_t *events_,
                                        int n_events_,
                                        long timeout_,
                                        zlink_config_result_t *error_out_);
/** @brief Start a built-in proxy between frontend and backend sockets. */
ZLINK_EXPORT zlink_config_result_t zlink_proxy (void *frontend_, void *backend_, void *capture_);
/** @brief Start a steerable proxy with an additional control socket. */
ZLINK_EXPORT zlink_config_result_t zlink_proxy_steerable (void *frontend_,
                                    void *backend_,
                                    void *capture_,
                                    void *control_);
/** @brief Check if the library supports a given capability (e.g. "ipc", "tls"). */
ZLINK_EXPORT bool zlink_has (const char *capability_);
/******************************************************************************/
/*  Timers                                                                    */
/******************************************************************************/

typedef void (*zlink_timer_handler_fn) (void *timer_,
                                        uint64_t fire_count_,
                                        void *userdata_);
ZLINK_EXPORT void *zlink_timer_new (void);
ZLINK_EXPORT zlink_close_result_t zlink_timer_destroy (void **timer_p_);
ZLINK_EXPORT zlink_config_result_t zlink_timer_start (void *timer_,
                                    uint64_t interval_ns_,
                                    uint64_t repeat_count_);
ZLINK_EXPORT zlink_config_result_t zlink_timer_stop (void *timer_);
ZLINK_EXPORT zlink_recv_result_t zlink_timer_recv (void *timer_,
                                   uint64_t *fire_count_out_);
ZLINK_EXPORT zlink_handler_result_t zlink_timer_handler (void *timer_,
                                      zlink_timer_handler_fn handler_,
                                      void *userdata_);
/** @brief Start a high-resolution stopwatch. Returns an opaque handle. */
ZLINK_EXPORT void *zlink_stopwatch_start (void);
/** @brief Return elapsed microseconds without stopping the stopwatch. */
ZLINK_EXPORT unsigned long zlink_stopwatch_intermediate (void *watch_);
/** @brief Stop the stopwatch and return total elapsed microseconds. */
ZLINK_EXPORT unsigned long zlink_stopwatch_stop (void *watch_);
/** @brief Sleep for the given number of seconds. */
ZLINK_EXPORT void zlink_sleep (int seconds_);
typedef void (zlink_thread_fn) (void *);