bindings/rust/src/ffi.rs


    // -- Spot --------------------------------------------------------------
    pub fn zlink_spot_new(node: *mut c_void) -> *mut c_void;
    pub fn zlink_spot_destroy(spot_p: *mut *mut c_void) -> c_int;
    pub fn zlink_spot_node_new(ctx: *mut c_void) -> *mut c_void;
    pub fn zlink_spot_node_destroy(node_p: *mut *mut c_void) -> c_int;
    pub fn zlink_spot_node_bind(node: *mut c_void, endpoint: *const c_char) -> c_int;
    pub fn zlink_spot_node_connect_peer(node: *mut c_void, peer_endpoint: *const c_char) -> c_int;
    pub fn zlink_spot_node_disconnect_peer(
        node: *mut c_void,
        peer_endpoint: *const c_char,
    ) -> c_int;
    pub fn zlink_spot_node_attach_discovery(node: *mut c_void, discovery: *mut c_void) -> c_int;
    pub fn zlink_spot_send_spot(
        spot: *mut c_void,
        dest_node_rid: *const zlink_routing_id_t,
        dest_spot_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_spot_request_spot(
        spot: *mut c_void,
        dest_node_rid: *const zlink_routing_id_t,
        dest_spot_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        handler: zlink_reply_handler_fn,
        userdata: *mut c_void,
        flags: zlink_send_flags_t,
        timeout_ms: u32,
    ) -> c_int;
    pub fn zlink_spot_reply_spot(
        spot: *mut c_void,
        dest_node_rid: *const zlink_routing_id_t,
        dest_spot_rid: *const zlink_routing_id_t,
        request_seq: u64,
        parts: *mut zlink_msg_t,
        part_count: usize,
    ) -> c_int;
    pub fn zlink_spot_send_router(
        spot: *mut c_void,
        peer_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_spot_request_router(
        spot: *mut c_void,
        peer_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        handler: zlink_reply_handler_fn,
        userdata: *mut c_void,
        flags: zlink_send_flags_t,
        timeout_ms: u32,
    ) -> c_int;
    pub fn zlink_spot_reply_router(
        spot: *mut c_void,
        peer_rid: *const zlink_routing_id_t,
        request_seq: u64,
        parts: *mut zlink_msg_t,
        part_count: usize,
    ) -> c_int;
    pub fn zlink_spot_handler(
        spot: *mut c_void,
        handler: zlink_spot_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_spot_dispatch_event_handler(
        spot: *mut c_void,
        handler: zlink_spot_dispatch_event_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_spot_recv(
        spot: *mut c_void,
        source_rid_out: *mut *const zlink_routing_id_t,
        spot_rid_out: *mut *const zlink_routing_id_t,
        request_seq_out: *mut u64,
        parts_out: *mut *mut zlink_msg_t,
        part_count_out: *mut usize,
        flags: zlink_send_flags_t,
    ) -> c_int;

    // -- Spot / registry snapshot -------------------------------------------
    pub fn zlink_spot_node_status_snapshot(
        node: *mut c_void,
        out: *mut zlink_spot_node_status_t,
    ) -> c_int;
    pub fn zlink_spot_node_peers_snapshot(
        node: *mut c_void,
        entries: *mut zlink_spot_node_peer_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_spot_node_peers_query(
        node: *mut c_void,
        filter: *const zlink_spot_node_peer_filter_t,
        entries: *mut zlink_spot_node_peer_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_spot_node_subjects_snapshot(
        node: *mut c_void,
        filter: *const zlink_spot_node_subject_filter_t,
        entries: *mut zlink_spot_node_subject_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_registry_status_snapshot(
        registry: *mut c_void,
        out: *mut zlink_registry_status_t,
    ) -> c_int;
    pub fn zlink_registry_service_summary_snapshot(
        registry: *mut c_void,
        filter: *const zlink_registry_service_summary_filter_t,
        entries: *mut zlink_registry_service_summary_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_registry_member_peers(
        registry: *mut c_void,
        service_type: zlink_service_type_t,
        service_name: *const c_char,
        entries: *mut zlink_member_peer_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_registry_member_peer_metadata(
        registry: *mut c_void,
        service_type: zlink_service_type_t,
        service_name: *const c_char,
        service_role: u16,
        endpoint: *const c_char,
        metadata_out: *mut zlink_msg_t,
    ) -> c_int;
    pub fn zlink_discovery_member_peers(
        discovery: *mut c_void,
        entries: *mut zlink_member_peer_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_discovery_member_peer_metadata(
        discovery: *mut c_void,
        service_role: u16,
        endpoint: *const c_char,
        metadata_out: *mut zlink_msg_t,
    ) -> c_int;
    pub fn zlink_registry_topology_snapshot(
        registry: *mut c_void,
        entries: *mut zlink_registry_topology_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_registry_topology_query(
        registry: *mut c_void,
        filter: *const zlink_registry_topology_filter_t,
        entries: *mut zlink_registry_topology_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_registry_query_client_new(ctx: *mut c_void) -> *mut c_void;
    pub fn zlink_registry_query_client_connect(
        client: *mut c_void,
        endpoint: *const c_char,
    ) -> c_int;
    pub fn zlink_registry_query_snapshot(
        client: *mut c_void,
        filter: *const zlink_registry_topology_filter_t,
        entries: *mut zlink_registry_topology_entry_t,
        count: *mut usize,
    ) -> c_int;
    pub fn zlink_registry_query_destroy(client_p: *mut *mut c_void) -> c_int;

    // -- Poller ------------------------------------------------------------
    pub fn zlink_poll(items: *mut zlink_pollitem_t, nitems: c_int, timeout: c_long) -> c_int;
    pub fn zlink_poller_new() -> *mut c_void;
    pub fn zlink_poller_destroy(poller_p: *mut *mut c_void) -> c_int;
    pub fn zlink_poller_size(poller: *mut c_void, error_out: *mut c_int) -> c_int;
    pub fn zlink_poller_add(
        poller: *mut c_void,
        socket: *mut c_void,
        user_data: *mut c_void,
        events: i16,
    ) -> c_int;
    pub fn zlink_poller_modify(poller: *mut c_void, socket: *mut c_void, events: i16) -> c_int;
    pub fn zlink_poller_remove(poller: *mut c_void, socket: *mut c_void) -> c_int;
    pub fn zlink_poller_add_fd(
        poller: *mut c_void,
        fd: zlink_fd_t,
        user_data: *mut c_void,
        events: i16,
    ) -> c_int;
    pub fn zlink_poller_modify_fd(poller: *mut c_void, fd: zlink_fd_t, events: i16) -> c_int;
    pub fn zlink_poller_remove_fd(poller: *mut c_void, fd: zlink_fd_t) -> c_int;
    pub fn zlink_poller_wait(
        poller: *mut c_void,
        event: *mut zlink_poller_event_t,
        timeout: c_long,
    ) -> c_int;
    pub fn zlink_poller_wait_all(
        poller: *mut c_void,
        events: *mut zlink_poller_event_t,
        n_events: c_int,
        timeout: c_long,
    ) -> c_int;
    pub fn zlink_timer_new() -> *mut c_void;
    pub fn zlink_timer_destroy(timer_p: *mut *mut c_void) -> c_int;
    pub fn zlink_timer_start(timer: *mut c_void, interval_ns: u64, repeat_count: u64) -> c_int;
    pub fn zlink_timer_stop(timer: *mut c_void) -> c_int;
    pub fn zlink_timer_recv(timer: *mut c_void, out: *mut u64, flags: c_int) -> c_int;
    pub fn zlink_timer_handler(
        timer: *mut c_void,
        handler: unsafe extern "C" fn(timer: *mut c_void, count: u64, userdata: *mut c_void),
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_stopwatch_start() -> *mut c_void;
    pub fn zlink_stopwatch_intermediate(watch: *mut c_void) -> c_ulong;
    pub fn zlink_stopwatch_stop(watch: *mut c_void) -> c_ulong;

    // -- Proxy -------------------------------------------------------------
    pub fn zlink_proxy(frontend: *mut c_void, backend: *mut c_void, capture: *mut c_void) -> c_int;
    pub fn zlink_proxy_steerable(
        frontend: *mut c_void,
        backend: *mut c_void,
        capture: *mut c_void,
        control: *mut c_void,
    ) -> c_int;

    // -- Capability --------------------------------------------------------
    pub fn zlink_has(capability: *const c_char) -> c_int;
    pub fn zlink_sleep(seconds: c_int);
}
